# palimpsest

./: Cargo.toml  README.md
src/: bevy_main.rs  camera.rs  chunk.rs  diag.rs  input.rs  lib.rs  main.rs  renderer.rs  terrain.wgsl  world.rs
src/agents/: mod.rs
src/bevy_integration/: coarse_world.rs  mod.rs  plugin.rs  render_resources.rs  terrain_mesh.rs  ui_overlay.rs
src/climate/: carbon_cycle.rs  lapse_rate.rs  mod.rs  orographic.rs  thermostat.rs
src/common/: mod.rs
src/compute/: activity_mask.rs  gpu_stub.rs  mod.rs
src/config/: mod.rs
src/ecs/: components.rs  mod.rs  query.rs  scheduler.rs  world.rs
src/erosion/: mod.rs
src/flow/: mod.rs
src/geology/: fastscape.rs  mod.rs
src/graph/: mod.rs
src/grid/: mod.rs
src/heightmap/: mod.rs
src/hydrology/: mod.rs
src/integrators/: mod.rs
src/lod/: mod.rs
src/math/: mod.rs
src/nutrients/: mod.rs  pedogenesis.rs  pools.rs  solver.rs
src/pedogenesis/: mod.rs
src/soil/: mod.rs  pedogenesis.rs  solver.rs
src/svo/: mod.rs
src/terrain/: fastscape.rs  heightmap.rs  mod.rs  svo.rs
src/viz/: mod.rs
src/world/: mod.rs
