[package]
name = "deep_time_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deep_time_engine"
path = "src/main.rs"

[dependencies]
rayon = "=1.8.0"
glam = "0.24"
ndarray = "0.15"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"

[profile.release]
opt-level = 3
