[package]
name = "fastscape-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance landscape evolution model with reduced-complexity climate coupling"

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
rustfft = "6.1"
rayon = "1.8"
num-complex = "0.4"
image = "0.24"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
